# cw_habit_tracker

./: .dockerignore  .env.docker  .env.template  .gitignore  Dockerfile  all_code.txt  all_html_code.txt  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.override.yml  docker-compose.yml  dump.rdb  makefile  project_structure.txt  pyproject.toml
.github/workflows/: deploy.yml
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  tasks.py  telegram_bot.py  urls.py  validators.py  views.py
habits/management/commands/: clear_habits.py  debug_notifications.py  load_public_habits.py  notifications.py  run_bot.py  test_notification.py
habits/migrations/: 0001_initial.py
habits/templates/habits/: base.html  habit_detail.html  habit_list.html  notifications.html  public_habits.html
media/user/avatars/: java_developing.jfif
static/css/: style.css
templates/: base.html  home.html
templates/includes/: footer.html  header.html
user/: admin.py  mixins.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_user_telegram_chat_id_user_telegram_notifications_and_more.py
user/templates/user/: base.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile_edit.html  profile_edit_api.html  registration.html  user_list.html  user_list_api.html
user/templates/user/includes/: header.html
